Show moves played in current round

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@
 }
 
 .moveSelector,
-.scoreBoard {
+.scoreBoard,
+.currentMoves {
   margin: auto;
   align-items: center;
   justify-content: center;
